[project]
name = "video-downloader"
version = "0.1.0"
description = "Video downloading service"
authors = [
    {name = "JohnDevlopment",email = "johndevlopment7@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "yt-dlp (>=2024.12.23,<2025.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
basedpyright = "^1.23.2"
ruff = "^0.8.6"

