[project]
name = "video-downloader"
version = "0.1.0"
description = "Video downloading service"
authors = [
    {name = "JohnDevlopment",email = "johndevlopment7@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "yt-dlp (>=2024.12.23,<2025.0.0)"
]

[tool.pylint."messages control"]
disable = [
    "bad-inline-option",
    "deprecated-pragma",
    "raw-checker-failed",
    "locally-disabled",
    "file-ignored",
    "missing-class-docstring",
    "missing-module-docstring",
    "suppressed-message",
    "unspecified-encoding",
    "useless-suppression",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "use-symbolic-message-instead"
]

[tool.basedpyright]
reportAny = false
reportMissingTypeStubs = false
typeCheckingMode = "standard"
pythonVersion = "3.10"

[tool.ruff.lint]
select = ["I", "F", "E"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
basedpyright = "^1.23.2"
ruff = "^0.8.6"
icecream = "^2.1.3"
pylint = "^3.3.3"

